fix: prettier, closing head tag

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" style="scroll-behavior: smooth">
   <head>
     <!-- META -->
@@ -13,12 +13,15 @@
       href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;700&family=Playfair+Display:wght@700&display=swap"
       rel="stylesheet"
     />
+  </head>
   <body>
     <main>
       <section id="hero">
         <div class="gutter">
           <h1 class="title" data-animate>GSAP Canned Animations</h1>
-          <p class="subtitle" data-animate>This is really cool.<br />Trust me.</p>
+          <p class="subtitle" data-animate>
+            This is really cool.<br />Trust me.
+          </p>
           <a class="button" data-animate>Check it out!</a>
         </div>
       </section>
