feat: synchronous timeline with animation chaining

--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
           <p class="subtitle" data-animate>
             This is really cool.<br />Trust me.
           </p>
-          <a class="button" data-animate>Check it out!</a>
+          <a class="button" data-animate data-no-animate-color>Check it out!</a>
         </div>
       </section>
     </main>
